# printer-factory-sim

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  dashboard.py  main.py  models.py  notes.md  pyproject.toml  requirements.txt  seed.py  simulation.py  turn_engine.py
config/: sim.json
docs/: PRD.md
manufacturer/: .env.example  .gitignore  __init__.py  cli.py  config.json  dashboard.py  database.py  main.py  provider_config.json  provider_integration.py  requirements.txt  sales_orders.py  seed.json  seed.py  simulation.py
manufacturer/services/: __init__.py  suppliers.py
provider/: .env.example  __init__.py  api.py  cli.py  db.py  models.py  seed-provider.json  seed.py
provider/services/: __init__.py  catalog.py  exceptions.py  orders.py  simulation.py
retailer/: cli.py  database.py  main.py  manufacturer_integration.py  models.py  requirements.txt  retailer_config.json  seed-retailer.json  seed.py  simulation.py
scenarios/: smoke-test.json
skills/: manufacturer-manager.md  provider-manager.md  retailer-manager.md
ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
ui/src/: Dashboard.jsx  index.css  main.jsx
